fix extended pictographic emoji rendering on iOS

--- a/src/components/Chat/Emoji.scss
+++ b/src/components/Chat/Emoji.scss
@@ -6,7 +6,7 @@
   src: url("../../../assets/chat/TwemojiMozilla.ttf") format("truetype");
 }
 
-.emoji {
+.chat__emoji {
   font-size: 28px;
   font-family: "Twemoji";
   line-height: 1rem;
